# webgpu-learn

./: Cargo.toml  index.html  t.run.mjs
examples/tutorial1-window/: main.rs
examples/tutorial2-surface/: main.rs
examples/tutorial3-pipeline/: main.rs
examples/tutorial4-buffer/: main.rs  shader.wgsl
examples/tutorial5-textures/: main.rs  shader.wgsl
examples/tutorial6-uniforms/: main.rs  shader.wgsl
examples/tutorial7-instancing/: main.rs
examples/tutorial8-depth/: main.rs
examples/tutorial9-models/: main.rs  shader.wgsl
src/: lib.rs  main.rs
