[package]
name = "webgpu-learn"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.1"
env_logger = "0.9"
log = "0.4"
wgpu = "0.14"
cfg-if = "1"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
tobj = { version = "3.2.1", features = [
    "async",
]}

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.14", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
reqwest = { version = "0.11" }